tests/samples/negative/generics/generic_struct_literal_missing_args.ax
module generic_struct_literal_missing_args;

struct Tagged<T> {
    value: i32;
}

fn main() -> i32 {
    let tagged = Tagged {
        value: 1,
    };
    return 0;
}
